[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lock.gd" type="Script" id=1]
[ext_resource path="res://assets/114250__godofph__door-unlock.wav" type="AudioStream" id=2]

[node name="Lock" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorPatch" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[node name="LockPatch" type="Polygon2D" parent="."]
position = Vector2( 0, 24 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 8, 0, 8 )

[node name="Audio_Unlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
